--- a/css/style.scss
+++ b/css/style.scss
@@ -14,10 +14,18 @@ header {
     display: grid;
     grid-template-columns: 2fr 4fr 2fr;
     place-items: center;
+
+    #pokemonLogo {
+        width: 20vw;
+    }
+
+    a {
+        color: green;
+    }
 }
 
 main {
-    min-height: 70vh;
+    min-height: 60vh;
 
     h1 {
         margin: 3% 0% 5% 0%;
@@ -38,6 +46,18 @@ main {
     }
 }
 
+#toastMessage {
+    position: absolute;
+    bottom: 0vh;
+    width: 100%;
+    background: green;
+    color: white;
+    padding: 2% 0%;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+}
+
 footer {
     min-height: 10vh;
+    margin-top: 5%;
 }
