--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,16 @@ header {
   place-items: center;
 }
 
+header #pokemonLogo {
+  width: 20vw;
+}
+
+header a {
+  color: green;
+}
+
 main {
-  min-height: 70vh;
+  min-height: 60vh;
 }
 
 main h1 {
@@ -39,7 +47,20 @@ main .pokemon h1 {
   margin-top: 5vh;
 }
 
+#toastMessage {
+  position: absolute;
+  bottom: 0vh;
+  width: 100%;
+  background: green;
+  color: white;
+  padding: 2% 0%;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
 footer {
   min-height: 10vh;
+  margin-top: 5%;
 }
 /*# sourceMappingURL=style.css.map */
